# barda

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
barda/: __init__.py  base_importer.py  cli.py  comic_vine.py  cv_importer.py  exceptions.py  geek_importer.py  ignore_resources.py  image.py  import_series.py  importer_base.py  importer_comic_geek.py  importer_comic_vine.py  importer_marvel.py  locg.py  logging.py  marvel.py  options.py  post_data.py  resource_keys.py  run.py  settings.py  styles.py  update_gcd.py  utils.py  validators.py
barda/gcd/: db.py  gcd_issue.py
tests/: conftest.py  test_comic_geek.py  test_gcd_issue.py  test_image.py  test_import_series.py  test_options.py  test_settings.py  test_utils.py
