[tool.poetry]
name = "barda"
version = "0.2.21"
description = ""
authors = ["Brian Pepple <bpepple@metron.cloud>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyxdg = "^0.28"
questionary = "^2.0.1"
simyan = "^1.1.0"
titlecase = "^2.4"
bs4 = "^0.0.1"
requests = "^2.28.2"
ratelimit = "^2.2.1"
pillow = "^10.0.1"
mokkari = "^2.3.3"
esak = "^1.3.2"
python-dateutil = "^2.8.2"
comicgeeks = "^0.3.2"
mysql-connector-python = "8.0.32"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
pre-commit = "^2.20.0"
flake8 = "^6.0.0"
flake8-builtins = "^2.1.0"
flake8-blind-except = "^0.2.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
barda = "barda.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = ["PIL", "bs4", "comicgeeks", "dateutil", "esak", "mokkari", "mysql", "prompt_toolkit", "pytest", "questionary", "ratelimit", "requests", "simyan", "titlecase", "urllib3", "xdg"]

[tool.ruff]
fix = true
line-length = 100

[tool.coverage.run]
source = ["barda"]

[tool.coverage.report]
show_missing = true